# hailo-apps

./: .env  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  requirements.txt
.github/workflows/: python-release.yml
docker/api/: Dockerfile
docker/core/: Dockerfile
hailo_apps/apps/: __init__.py  face_detector.py  face_tracker.py
hailo_apps/meta/data_models/: __init__.py  image.py
hailo_apps/meta/interfaces/: __init__.py  hailo_app.py  picam_app.py  rotator_app.py
hailo_apps/servos/: servos.py
hailo_apps/utils/: image.py
notebooks/01-apps/: 01-face-detector.ipynb  01-face-tracker.ipynb
notebooks/01-experiments/: 01-camera-image-hailo-pred.ipynb
notebooks/01-servos/: 01-servos.ipynb
notebooks/02-apps/: 01-face-tracker.ipynb
notebooks/02-sensehat-dsp/: 01-sensehat-dsp.ipynb
notebooks/03-servos/: 01-servos.ipynb
src/hailo_apps/apps/: face_tracker.py
src/hailo_apps/meta/interfaces/: hailo_app.py  hailo_detection_model.py  picam_app.py  rotator_app.py
src/hailo_apps/servos/: __init__.py  servos.py
